# fbsdgpio

./: README.md
native/: GPIO.md  gpio.c  gpio.h
py/: README.md  pyproject.toml  setup.cfg
py/src/: fbsdgpio.py
samples/py/: 001_simple.py
